# vfive

./: .clang-format  CMakeLists.txt  README.md  compile_commands.json  generate.sh  leaks_blacklist  lift_build.py  run.sh
src/: main.c  main.cpp  types.h
src/log/: log.c  log.h  print.c
